src/objects/SAE_Speciality__mdt.object
<CustomObject>
    <fields>
        <fullName>Delegated_Specialty__c</fullName>
        <description>Shows whether specialty is deleted or not</description>
        <label>Delegated Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Short_Description__c</fullName>
        <description>Specialty Short Description</description>
        <label>Specialty Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Values__c</fullName>
        <label>Specialty Values</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SAE Speciality</label>
    <listViews>
        <fullName>All_SAE_Specialities</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Specialty_Values__c</columns>
        <columns>Specialty_Short_Description__c</columns>
        <columns>Delegated_Specialty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All SAE Specialities</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SAE Specialities</pluralLabel>
</CustomObject>